<resources>
    <string name="app_name">Agita</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_user">This user is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_evento">This field is required</string>
    <string name="tapaBoracos">colocar qualquer coisa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Textos do menu de filtros de listagens de eventos-->
    <string name="filtro_data">Data</string>
    <string name="filtro_nome">Nome</string>

    <string name="filtro_rock">Rock</string>
    <string name="filtro_pop">Pop</string>
    <string name="filtro_eletronica">Eletrônica</string>
    <string name="filtro_forro">Forró</string>
    <string name="filtro_sertanejo">Sertanejo</string>
    <string name="filtro_brega">Brega</string>
    <string name="filtro_swingueira">Swingueira</string>
    <string name="filtro_reggae">Reggae</string>
    <string name="filtro_reggaeton">Reggaeton</string>
    <string name="filtro_funk">Funk</string>
    <string name="filtro_funkCarioca">Funk carioca</string>
    <string name="filtro_gospel">Gospel</string>
    <string name="filtro_mpb">MPB</string>
    <string name="filtro_classico">Clássico</string>
    <string name="filtro_hiphop_rap">Hip Hop/Rap</string>
    <string name="filtro_samba">Samba</string>
    <string name="filtro_dance">Dance</string>
    <string name="filtro_axe">Axé</string>
    <string name="filtro_heavymetal">Heavy Metal</string>
    <string name="filtro_instrumental">Instrumental</string>
    <string name="filtro_jazz">Jazz</string>
    <string name="filtro_pagode">Pagode</string>
    <string name="filtro_progressivo">Progressivo</string>
    <string name="filtro_country">Country</string>
    <string name="filtro_outros">Outros</string>

    <string name="campoBuscaEventos">Buscar</string>


    <string name="botaoEditarEvento">Editar</string>
    <string name="botaoSalvarUsuario">Salvar</string>
    <string name="smsErroLoad">Erro ao tentar carregar o conteúdo do evento selecionado!</string>
    <string name="aviso_nome_validacao">Por favor, informe um nome válido!</string>
    <string name="aviso_hora_validacao">Por favor, informe o horário do evento!</string>
    <string name="aviso_data_validacao">Por favor, informe a data do evento!</string>
    <string name="aviso_local_validacao">Por favor, informe o local do evento! Exemplo: Av Brasil Maranguape I, Natal, RN</string>
    <string name="aviso_estilo_validacao">Por favor, informe o estido do evento!</string>
    <string name="aviso_valor_validacao">Por favor, informe um valor válido!</string>
    <string name="alerta_endereco_invalido">Por favor, informe um endereço válido! Exemplo: rua ou avenida, cidade, estado.</string>
    <string name="salvo_sucesso_sms">Dados salvos com sucesso!</string>
    <string name="login_validacao">Username já cadastrado!</string>
    <string name="email_validacao">Já existe um usuário para este email.</string>
    <string name="sms_ajuda_local">Exemplo: Rua ou Av, cidade, sigla do estado</string>
    <string name="dica_autcoComplete_cadastroEvent">Informe o estilo musical do evento!</string>
    <string name="texto_hint_campoBusca">Buscar</string>
    <string name="botaoRecuperaUsuario">Recuperar</string>
    <string name="campoCPF_recupera">CPF somente números</string>
    <string name="campoEmail_recupera">E-mail</string>
    <string name="tituloRecupera">Recuperaçãoa de dados cadastrais</string>
    <string name="texto_atualizaLogin_recuperado">Informe um novo login!</string>
    <string name="texto_atualizaSenha_recuperada">Informe uma nova senha</string>
    <string name="Texto_botao_ConfirmaAlteracoes">Confirmar</string>
    <string name="texto_menu_sobre">Sobre</string>
</resources>
