<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EventoActivity">

    <item
        android:id="@+id/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/campoBuscaEventos"/>

    <item
        android:id="@+id/opcao_filtro_nome"
        android:orderInCategory="100"
        android:title="@string/filtro_nome"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_data"
        android:orderInCategory="100"
        android:title="@string/filtro_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_rock"
        android:orderInCategory="100"
        android:title="@string/filtro_rock"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_pop"
        android:orderInCategory="100"
        android:title="@string/filtro_pop"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_eletronica"
        android:orderInCategory="100"
        android:title="@string/filtro_eletronica"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_forro"
        android:orderInCategory="100"
        android:title="@string/filtro_forro"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_funk"
        android:orderInCategory="100"
        android:title="@string/filtro_funk"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_funkCarioca"
        android:orderInCategory="100"
        android:title="@string/filtro_funkCarioca"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_sertanejo"
        android:orderInCategory="100"
        android:title="@string/filtro_sertanejo"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_swingueira"
        android:orderInCategory="100"
        android:title="@string/filtro_swingueira"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_brega"
        android:orderInCategory="100"
        android:title="@string/filtro_brega"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_reggae"
        android:orderInCategory="100"
        android:title="@string/filtro_reggae"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_reggaeton"
        android:orderInCategory="100"
        android:title="@string/filtro_reggaeton"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_gospel"
        android:orderInCategory="100"
        android:title="@string/filtro_gospel"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_mpb"
        android:orderInCategory="100"
        android:title="@string/filtro_mpb"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_classico"
        android:orderInCategory="100"
        android:title="@string/filtro_classico"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_hiphop_rap"
        android:orderInCategory="100"
        android:title="@string/filtro_hiphop_rap"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_samba"
        android:orderInCategory="100"
        android:title="@string/filtro_samba"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_dance"
        android:orderInCategory="100"
        android:title="@string/filtro_dance"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_axe"
        android:orderInCategory="100"
        android:title="@string/filtro_axe"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_heavymetal"
        android:orderInCategory="100"
        android:title="@string/filtro_heavymetal"
        app:showAsAction="never" />

    <item
        android:id="@+id/opcao_filtro_instrumental"
        android:orderInCategory="100"
        android:title="@string/filtro_instrumental"
        app:showAsAction="never" />
    <item
        android:id="@+id/opcao_filtro_jazz"
        android:orderInCategory="100"
        android:title="@string/filtro_jazz"
        app:showAsAction="never" />
    <item
        android:id="@+id/opcao_filtro_pagode"
        android:orderInCategory="100"
        android:title="@string/filtro_pagode"
        app:showAsAction="never" />
    <item
        android:id="@+id/opcao_filtro_progressivo"
        android:orderInCategory="100"
        android:title="@string/filtro_progressivo"
        app:showAsAction="never" />
    <item
        android:id="@+id/opcao_filtro_country"
        android:orderInCategory="100"
        android:title="@string/filtro_country"
        app:showAsAction="never" />
    <item
        android:id="@+id/opcao_filtro_outros"
        android:orderInCategory="100"
        android:title="@string/filtro_outros"
        app:showAsAction="never" />

</menu>
