<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RecuperaActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloRecuperaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloRecupera"
        android:gravity="center"
        android:textSize="@dimen/tamanhoTituloRecupera"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo_agita_resize" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/inputLoginRecupera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informa o novo login"
            android:visibility="gone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/textLayoutEMAIL">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoEmail_recupera"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/inputSenhaRecupera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informe a nova senha"
            android:inputType="textPassword"
            android:visibility="gone"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/textLayoutCPF">

        <EditText
            android:id="@+id/inputCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campoCPF_recupera"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btrecuperaUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/botaoRecuperaUsuario" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btConfirmaAlteracoes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="12dp"
        android:text="@string/Texto_botao_ConfirmaAlteracoes" />

</android.support.v7.widget.LinearLayoutCompat>